src/objects/Validation_Mapping_Generate_Message__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Validation Message generate by Custom Setting</description>
    <fields>
        <fullName>Is_Required_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <inlineHelpText>Use Object Api Name</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Condition_Field_Api_Name__c</fullName>
        <inlineHelpText>Use Field Api Name and Please put single Value only.</inlineHelpText>
        <label>Parent Condition Field Api Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Condition_Field_Value__c</fullName>
        <inlineHelpText>We can use multiple values here. Like for multiple(value1,value2).</inlineHelpText>
        <label>Parent Condition Field Value</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Required_Child_Fields__c</fullName>
        <inlineHelpText>Use Field Api Name and Please avoid space.</inlineHelpText>
        <label>Required Child Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Required_Child_Objects__c</fullName>
        <inlineHelpText>Use Child Object Api Name</inlineHelpText>
        <label>Required Child Objects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Required_Parent_Fields__c</fullName>
        <inlineHelpText>Use Field Api Name and Please avoid space.</inlineHelpText>
        <label>Required Parent Fields</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unique_Number__c</fullName>
        <label>Unique Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Validation Mapping Generate Message</label>
</CustomObject>